<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            tools:context=".HomeFragment">

            <ImageView
                android:id="@+id/info_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/info_one"
                app:layout_constraintEnd_toStartOf="@+id/info_three"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/info_one"
                app:layout_constraintTop_toTopOf="@+id/info_one"
                app:srcCompat="@drawable/workout"
                android:contentDescription="@string/workout"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/currency"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                android:contentDescription="@string/currency"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/chatactive"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/question"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sans_semi_condensed_bold"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/guidelineOne"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nextred"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                app:layout_constraintTop_toTopOf="@+id/textView"
                android:contentDescription="@string/forward"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sans_semi_condensed_medium"
                android:text="@string/street_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/guidelineOne"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/currentlocation"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                android:contentDescription="@string/location"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/carouselViewPager"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            </androidx.viewpager2.widget.ViewPager2>

            <View
                android:id="@+id/view"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/carousel_indicator_background"
                app:layout_constraintBottom_toBottomOf="@+id/carouselViewPager"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                app:layout_constraintTop_toBottomOf="@+id/carouselViewPager" />

            <TextView
                android:id="@+id/carouselTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_medium"
                tools:text="See All 1/3"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <ImageView
                android:id="@+id/info_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/info_two"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:srcCompat="@drawable/theme"
                android:contentDescription="@string/theme"/>

            <ImageView
                android:id="@+id/info_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/info_two"
                app:layout_constraintEnd_toStartOf="@+id/info_four"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/info_two"
                app:layout_constraintTop_toTopOf="@+id/info_two"
                app:srcCompat="@drawable/fnb"
                android:contentDescription="@string/fnb"/>

            <ImageView
                android:id="@+id/info_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/info_three"
                app:layout_constraintEnd_toStartOf="@+id/info_five"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/info_three"
                app:layout_constraintTop_toTopOf="@+id/info_three"
                app:srcCompat="@drawable/kidsfamily"
                android:contentDescription="@string/kid_family"/>

            <ImageView
                android:id="@+id/info_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/info_four"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/info_four"
                app:layout_constraintTop_toTopOf="@+id/info_four"
                app:srcCompat="@drawable/wellness"
                android:contentDescription="@string/wellness"/>

            <TextView
                android:id="@+id/info_one_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_medium"
                android:text="@string/amenities"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/info_one"
                app:layout_constraintStart_toStartOf="@+id/info_one"
                app:layout_constraintTop_toBottomOf="@+id/info_one" />

            <TextView
                android:id="@+id/info_two_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_medium"
                android:text="@string/facilities"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/info_two"
                app:layout_constraintStart_toStartOf="@+id/info_two"
                app:layout_constraintTop_toBottomOf="@+id/info_two" />

            <TextView
                android:id="@+id/info_three_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_medium"
                android:text="@string/f_amp_b"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/info_three"
                app:layout_constraintStart_toStartOf="@+id/info_three"
                app:layout_constraintTop_toBottomOf="@+id/info_three" />

            <TextView
                android:id="@+id/info_four_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_medium"
                android:text="@string/kids_family"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/info_four"
                app:layout_constraintStart_toStartOf="@+id/info_four"
                app:layout_constraintTop_toBottomOf="@+id/info_four" />

            <TextView
                android:id="@+id/info_five_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_medium"
                android:text="@string/wellness_txt"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/info_five"
                app:layout_constraintStart_toStartOf="@+id/info_five"
                app:layout_constraintTop_toBottomOf="@+id/info_five" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/tab_background"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/info_one_txt" />

            <View
                android:id="@+id/roomBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/tab_border"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toStartOf="@+id/rateBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/rateBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/tab_background"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/roomBtn"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottomRecycler"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layoutAnimation="@anim/layout_animation"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:listitem="@layout/rate_item" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_bold"
                android:text="@string/by_room"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/roomBtn"
                app:layout_constraintEnd_toEndOf="@+id/roomBtn"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/roomBtn" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_semi_condensed_bold"
                android:text="@string/by_rates"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/rateBtn"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
                app:layout_constraintStart_toEndOf="@+id/roomBtn"
                app:layout_constraintTop_toTopOf="@+id/rateBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>